[gd_scene load_steps=5 format=3 uid="uid://c1exf5l8gq8ej"]

[ext_resource type="Script" uid="uid://w2yso5q42vwd" path="res://Scripts/hook.gd" id="1_7faqv"]
[ext_resource type="Texture2D" uid="uid://wcr558vmhomi" path="res://Sprites/download.png" id="2_aenmm"]
[ext_resource type="Texture2D" uid="uid://byl6jlx7pa3t8" path="res://Sprites/Chain-Transparent-Background-PNG.png" id="3_6nbf2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7faqv"]

[node name="HookShoot" type="Node2D"]

[node name="Hook" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_7faqv")
hookSpeed = 5.0
hookLenght = 100.0
desctructionTime = 0.5

[node name="Sprite2D" type="Sprite2D" parent="Hook"]
position = Vector2(1.235, 0)
rotation = -1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_aenmm")

[node name="DestructionTimer" type="Timer" parent="Hook"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hook"]
shape = SubResource("RectangleShape2D_7faqv")

[node name="Shoot" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Shoot"]
texture_repeat = 2
points = PackedVector2Array(0, 0, 0, 0)
width = 50.0
texture = ExtResource("3_6nbf2")
texture_mode = 1

[connection signal="body_entered" from="Hook" to="Hook" method="StopHookshoot"]
[connection signal="timeout" from="Hook/DestructionTimer" to="Hook" method="destroyHookshoot"]
